--- a/translations/kangyur/translations/062-016_toh216-eliminating_ajatasatrus_remorse.xml
+++ b/translations/kangyur/translations/062-016_toh216-eliminating_ajatasatrus_remorse.xml
@@ -42,7 +42,7 @@
                                         林媛媛, 黄璎珞</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -188,6 +188,9 @@
                 </change>
                 <change who="#sameer" when="2023-10-16T09:26:14.769Z" type="text-version" status="1.0.2" xml:id="UT22084-062-016-1289">
                     <desc>Included in App v 3.7</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-30T14:06:43.993Z" type="text-version" status="1.0.3" xml:id="UT22084-062-016-1292">
+                    <desc>Added footnote and bib entry.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -372,7 +375,7 @@
                                                 significant in that it provides a very early
                                                 terminus ante quem for the composition of this sūtra
                                                 that places it no later than the late second
-                                                century—and most likely some time before that. The
+                                                century—and most likely some time before that.<note place="end" xml:id="UT22084-062-016-1290">An English translation of Lokakṣema's Chinese translation has been self-published by Shaku Shingan (2022).</note> The
                                                 second translation (Taishō 627, <title xml:lang="Zh-Ltn">Wen shu zhi li pu chao san mei
                                                   jing</title>
                                                 <title xml:lang="zh">文殊支利普超三昧經</title>)<note place="end" xml:id="UT22084-062-016-834">
@@ -5063,6 +5066,9 @@
                                                 Survey.” <title xml:lang="en">Annual Report of The
                                                   International Research Institute for Advanced
                                                   Buddhology</title> 21 (2020): 227–46.</bibl>
+                                        <bibl xml:id="UT22084-062-016-1291">Shingan, Shaku. <title xml:lang="en">The King Ajātaśatru Sūtra: A Translation of the
+                                                Ajātaśatrukaukṛtyavinodana Sūtra from the Chinese of Lokakṣema
+                                                Together with Three Short Sūtras on Ajātaśatru.</title> Kamakura, 2022.</bibl>
                                 </div>
                         </div>
                         <div type="glossary" status="excluded">
