--- a/translations/kangyur/placeholders/071-007_toh293-the_great_sutra_on_the_best_banner.xml
+++ b/translations/kangyur/placeholders/071-007_toh293-the_great_sutra_on_the_best_banner.xml
@@ -5,21 +5,23 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Great Sūtra on the Best Banner (2)</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">dhvajāgramahāsūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Dhvajāgramahāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mdo chen po rgyal mtshan dam pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">dhvajāgranāmamahāsūtraṃ</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Dhvajāgranāmamahāsūtraṃ</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mdo chen po rgyal mtshan dam pa zhes bya ba</title>
-                <author role="translatorMain" xml:id="UT22084-071-007-1"/>
+                <author role="translatorMain" xml:id="UT22084-071-007-1">Adam T. Miller</author>
                 <author role="translatorEng" xml:id="UT22084-071-007-2">Adam T. Miller</author>
                 <editor role="projectEditor" xml:id="UT22084-071-007-3">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-071-007-4">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-071-007-29">Andreas Doctor</editor>
+                <editor role="projectEditor" xml:id="UT22084-071-007-36">John Canti</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.14 <date>2023</date>
+                <edition>v 0.0.17 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-071-007"/>
                 <date/>
             </publicationStmt>
@@ -94,6 +96,18 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-17T08:16:51.501Z" type="text-version" status="0.0.14" xml:id="UT22084-071-007-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-17T08:17:34.75Z" type="text-version" status="0.0.15" xml:id="UT22084-071-007-30">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T12:59:09.6Z" type="text-version" status="0.0.16" xml:id="UT22084-071-007-37">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-30T14:07:23.445Z" type="translation-status" status="2.c" xml:id="UT22084-071-007-38">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-30T14:07:23.445Z" type="text-version" status="0.0.17" xml:id="UT22084-071-007-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
