--- a/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
+++ b/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
@@ -9,7 +9,7 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">gser gyi bye ma lta bu'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasuvarṇavālukopama­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gser gyi bye ma lta bu zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" xml:id="UT22084-054-007-1"/>
+                <author role="translatorMain" xml:id="UT22084-054-007-1">Sakya Pandita Translation Group</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-054-007-2">Khenpo Kalsang Gyaltsen</consultant>
                 <author role="translatorEng" xml:id="UT22084-054-007-3">Khenpo Kalsang Gyaltsen</author>
                 <author role="translatorEng" xml:id="UT22084-054-007-4">Chodrungma Kunga Chodron</author>
@@ -17,14 +17,15 @@
                 <editor role="projectEditor" xml:id="UT22084-054-007-6">George FitzHerbert</editor>
                 <editor role="projectEditor" xml:id="UT22084-054-007-7">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-054-007-28">Konchog Norbu</editor>
+                <editor role="projectEditor" xml:id="UT22084-054-007-44">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.15 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-054-007"/>
                 <date/>
             </publicationStmt>
@@ -99,6 +100,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-27T09:13:29.325Z" type="text-version" status="0.0.13" xml:id="UT22084-054-007-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-27T09:19:17.968Z" type="text-version" status="0.0.14" xml:id="UT22084-054-007-45">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-30T14:16:07.586Z" type="translation-status" status="2.a" xml:id="UT22084-054-007-46">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-30T14:16:07.586Z" type="text-version" status="0.0.15" xml:id="UT22084-054-007-47">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
