--- a/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -5,7 +5,7 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Sūtra on the Benefits of the Five Precepts</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pañcaśikṣānusaṃsasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Pañcaśikṣānusaṃsasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bslab pa lnga'i phan yon gyi mdo/</title>
                 <author role="translatorMain" xml:id="UT22084-034-025-1">Anandaśrī Translation Team</author>
                 <consultant role="projectManager" xml:id="UT22084-034-025-2">Bruno Galasek-Hul</consultant>
@@ -15,11 +15,11 @@
                 <editor role="copyEditor" xml:id="UT22084-034-025-26">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-034-025"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +88,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-27T08:53:26.59Z" type="text-version" status="0.0.12" xml:id="UT22084-034-025-29">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-31T07:53:46.295Z" type="translation-status" status="2.b" xml:id="UT22084-034-025-30">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-31T07:53:46.295Z" type="text-version" status="0.0.13" xml:id="UT22084-034-025-31">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
