--- a/translations/kangyur/placeholders/079-019_toh392-the_secret_tantra_of_gnosis.xml
+++ b/translations/kangyur/placeholders/079-019_toh392-the_secret_tantra_of_gnosis.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Secret Tantra of Gnosis</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">jñānaguhyatantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Jñānaguhyatantra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">ye shes gsang ba'i rgyud/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrījñānaguhyatantrarāja</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Śrījñānaguhyatantrarāja</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal ye shes gsang ba'i rgyud kyi rgyal po/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
+                <author role="translatorMain" xml:id="UT22084-079-019-1"/>
+                <author role="translatorEng" xml:id="UT22084-079-019-2">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-079-019"/>
                 <date/>
             </publicationStmt>
@@ -31,12 +32,27 @@
                     <idno source-id="O1JC114941JC12093" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-14T08:42:15.96Z" user="admin">14/03/2023 08:42:15</note>
-                <note type="updated" update="translation-status" value="3" date-time="2023-03-14T08:41:42.29Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-14T08:41:42.29Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-14T08:42:14.472Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-03-14T08:41:42.29Z" type="translation-status" status="3" xml:id="UT22084-079-019-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-14T08:41:42.29Z" type="text-version" status="0.0.1" xml:id="UT22084-079-019-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-14T08:42:14.472Z" type="text-version" status="0.0.2" xml:id="UT22084-079-019-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-079-019-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-01T10:22:09.762Z" type="translation-status" status="2.h" xml:id="UT22084-079-019-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-01T10:22:09.762Z" type="text-version" status="0.0.4" xml:id="UT22084-079-019-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
