--- a/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
+++ b/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
@@ -5,18 +5,18 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Verses on Prasenajit</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">prasenajidgāthā</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Prasenajidgāthā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gsal rgyal gyi tshigs bcad/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gsal rgyal gyi tshigs su bcad pa</title>
                 <author role="translatorMain" xml:id="UT22084-072-022-1"/>
                 <author role="translatorEng" xml:id="UT22084-072-022-2">Elizabeth Angowski</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-072-022"/>
                 <date/>
             </publicationStmt>
@@ -55,6 +55,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-14T12:56:33.086Z" type="text-version" status="0.0.5" xml:id="UT22084-072-022-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-02T14:19:00.828Z" type="translation-status" status="2.g" xml:id="UT22084-072-022-11">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-02T14:19:00.828Z" type="text-version" status="0.0.6" xml:id="UT22084-072-022-12">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
