--- a/translations/kangyur/placeholders/090-001_toh557-the_sovereign_lord_of_sutras_the_sublime_golden_light.xml
+++ b/translations/kangyur/placeholders/090-001_toh557-the_sovereign_lord_of_sutras_the_sublime_golden_light.xml
@@ -5,24 +5,25 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sovereign Lord of Sūtras, The Sublime Golden Light</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">suvarṇaprabhāsottama­sūtrendrarājasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Suvarṇaprabhāsottama­sūtrendrarājasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gser 'od dam pa mdo sde'i dbang po'i rgyal po'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasuvarṇaprabhāsottama­sūtrendrarājanāma­mahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasuvarṇaprabhāsottama­sūtrendrarājanāma­mahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gser 'od dam pa mdo sde'i dbang po'i rgyal po zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="zh">《妙金光明​經部之王經》</title>
-                <author role="translatorMain" ref="eft:team-22"/>
-                <author role="translatorEng" ref="eft:person-142">Peter Alan Roberts</author>
-                <editor role="reviser" ref="eft:person-143">Emily Bower</editor>
-                <consultant role="projectManager" ref="eft:person-143">Emily Bower</consultant>
-                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
-                <sponsor ref="sponsors.xml#sponsor-2">May Gu, Likai Gu and Tiffany Tai, Lillian Gu and Jerry Yen, and dedicated to George Gu</sponsor>
+                <author role="translatorMain" xml:id="UT22084-090-001-1">Peter Alan Roberts and team</author>
+                <author role="translatorEng" xml:id="UT22084-090-001-2">Peter Alan Roberts</author>
+                <editor role="reviser" xml:id="UT22084-090-001-3">Emily Bower</editor>
+                <consultant role="projectManager" xml:id="UT22084-090-001-4">Emily Bower</consultant>
+                <editor role="projectEditor" xml:id="UT22084-090-001-5">Rory Lindsay</editor>
+                <sponsor xml:id="UT22084-090-001-6">May Gu, Likai Gu and Tiffany Tai, Lillian Gu and Jerry Yen, and dedicated to George Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-090-001"/>
                 <date/>
             </publicationStmt>
@@ -37,15 +38,39 @@
                     <idno source-id="O1JC114941JC12285" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-01T08:40:08.575Z" user="admin">01/06/2023 08:40:08</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-06T14:32:39.156Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:33:29.038Z" user="cabie-sim">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-01T07:49:02.374Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-06-01T08:40:04.242Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-06-01T08:40:04.242Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-090-001-7">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2020-03-06T14:32:39.156Z" type="translation-status" status="2.h" xml:id="UT22084-090-001-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T07:33:29.038Z" type="text-version" status="0.0.2" xml:id="UT22084-090-001-9">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-01T07:49:02.374Z" type="text-version" status="0.0.3" xml:id="UT22084-090-001-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-01T08:40:04.242Z" type="translation-status" status="2.g" xml:id="UT22084-090-001-11">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-01T08:40:04.242Z" type="text-version" status="0.0.4" xml:id="UT22084-090-001-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-090-001-13">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-04T09:07:26.508Z" type="text-version" status="0.0.6" xml:id="UT22084-090-001-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-02T15:25:22.276Z" type="translation-status" status="2.f" xml:id="UT22084-090-001-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-02T15:25:22.276Z" type="text-version" status="0.0.7" xml:id="UT22084-090-001-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
