--- a/translations/kangyur/placeholders/001-002_toh1-2-chapter_2_on_the_rite_of_restoration.xml
+++ b/translations/kangyur/placeholders/001-002_toh1-2-chapter_2_on_the_rite_of_restoration.xml
@@ -5,29 +5,30 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Chapter 2: On the Rite of Restoration</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">poṣadhavastu</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Poṣadhavastu</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gso sbyong gi gzhi/</title>
                 <title type="otherTitle" xml:lang="zh">「律儀根本」之《說戒本事》</title>
-                <author role="translatorMain" ref="contributors.xml#team-26"/>
-                <author role="translatorEng" ref="contributors.xml#person-165">Robert
+                <author role="translatorMain" xml:id="UT22084-001-002-1"/>
+                <author role="translatorEng" xml:id="UT22084-001-002-2">Robert
                     Miller</author>
-                <editor role="externalReviewer" ref="contributors.xml#person-284">Vincent
+                <editor role="externalReviewer" xml:id="UT22084-001-002-3">Vincent
                     Eltschinger</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-165">Robert
+                <consultant role="projectManager" xml:id="UT22084-001-002-4">Robert
                     Miller</consultant>
-                <consultant role="advisor" ref="contributors.xml#person-168">Haiyan Hu-von
+                <consultant role="advisor" xml:id="UT22084-001-002-5">Haiyan Hu-von
                     Hinüber</consultant>
-                <consultant role="advisor" ref="contributors.xml#person-170">Maurice
+                <consultant role="advisor" xml:id="UT22084-001-002-6">Maurice
                     Ozaine</consultant>
-                <editor role="reviser" ref="contributors.xml#person-169">Matthew Wuethrich</editor>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-171">Geshé Tséwang
+                <editor role="reviser" xml:id="UT22084-001-002-7">Matthew Wuethrich</editor>
+                <consultant role="dharmaMaster" xml:id="UT22084-001-002-8">Geshé Tséwang
                     Nyima</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.5 <date>2019</date>
+                <edition>v 0.1.7 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-001-002"/>
                 <date/>
             </publicationStmt>
@@ -42,18 +43,43 @@
                     <idno source-id="O1JC114941JC12906" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-13T16:58:13.816Z" user="admin">13/02/2023 16:58:13</note>
-                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-30T08:01:13.204Z" user="andreas">v 0.1.0</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2019-10-30T08:01:13.204Z" user="andreas">2.g</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:49:16.763Z" user="mike">2.h</note>
-                <note type="updated" update="text-version" value="0.1.1" date-time="2021-02-01T11:27:49.47Z" user="line-tofte">Auto
-                    (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.1.2" date-time="2021-08-04T22:19:35.755Z" user="mike">Summaries added</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2023-02-13T16:55:36.648Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.1.4" date-time="2023-02-13T16:57:02.712Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.1.5" date-time="2023-02-13T16:58:12.322Z" user="amy">Auto (update-sponsorship)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#andreas" when="2019-10-30T08:01:13.204Z" type="text-version" status="v 0.1.0" xml:id="UT22084-001-002-9">
+                    <desc>v 0.1.0</desc>
+                </change>
+                <change who="#andreas" when="2019-10-30T08:01:13.204Z" type="translation-status" status="2.g" xml:id="UT22084-001-002-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#mike" when="2020-01-27T12:49:16.763Z" type="translation-status" status="2.h" xml:id="UT22084-001-002-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-02-01T11:27:49.47Z" type="text-version" status="0.1.1" xml:id="UT22084-001-002-12">
+                    <desc>Auto
+                    (update-contributors)</desc>
+                </change>
+                <change who="#mike" when="2021-08-04T22:19:35.755Z" type="text-version" status="0.1.2" xml:id="UT22084-001-002-13">
+                    <desc>Summaries added</desc>
+                </change>
+                <change who="#amy" when="2023-02-13T16:55:36.648Z" type="text-version" status="0.1.3" xml:id="UT22084-001-002-14">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2023-02-13T16:57:02.712Z" type="text-version" status="0.1.4" xml:id="UT22084-001-002-15">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2023-02-13T16:58:12.322Z" type="text-version" status="0.1.5" xml:id="UT22084-001-002-16">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.1.6" xml:id="UT22084-001-002-17">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-03T11:41:47.039Z" type="translation-status" status="2.g" xml:id="UT22084-001-002-18">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-03T11:41:47.039Z" type="text-version" status="0.1.7" xml:id="UT22084-001-002-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
