--- a/translations/kangyur/placeholders/001-004_toh1-4-chapter_4_on_the_rains.xml
+++ b/translations/kangyur/placeholders/001-004_toh1-4-chapter_4_on_the_rains.xml
@@ -5,23 +5,24 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dbyar gyi gzhi/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">varṣāvastu</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Varṣāvastu</title>
                 <title type="mainTitle" xml:lang="en">Chapter 4: On the Rains</title>
-                <author role="translatorMain" ref="contributors.xml#team-26"/>
-                <author role="translatorEng" ref="contributors.xml#person-165">Robert Miller</author>
-                <editor role="externalReviewer" ref="contributors.xml#person-284">Vincent Eltschinger</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-165">Robert Miller</consultant>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-171">Geshé Tséwang Nyima</consultant>
-                <editor role="reviser" ref="contributors.xml#person-169">Matthew Wuethrich</editor>
-                <consultant role="advisor" ref="contributors.xml#person-168">Haiyan Hu-von Hinüber</consultant>
-                <consultant role="advisor" ref="contributors.xml#person-170">Maurice Ozaine</consultant>
+                <author role="translatorMain" xml:id="UT22084-001-004-1"/>
+                <author role="translatorEng" xml:id="UT22084-001-004-2">Robert Miller</author>
+                <editor role="externalReviewer" xml:id="UT22084-001-004-3">Vincent Eltschinger</editor>
+                <consultant role="projectManager" xml:id="UT22084-001-004-4">Robert Miller</consultant>
+                <consultant role="dharmaMaster" xml:id="UT22084-001-004-5">Geshé Tséwang Nyima</consultant>
+                <editor role="reviser" xml:id="UT22084-001-004-6">Matthew Wuethrich</editor>
+                <consultant role="advisor" xml:id="UT22084-001-004-7">Haiyan Hu-von Hinüber</consultant>
+                <consultant role="advisor" xml:id="UT22084-001-004-8">Maurice Ozaine</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.1 <date>2019</date>
+                <edition>v 0.1.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-001-004"/>
                 <date/>
             </publicationStmt>
@@ -36,14 +37,30 @@
                     <idno source-id="O1JC114941JC12908" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-02-01T11:29:51.161Z" user="admin">01/02/2021 11:29:51</note>
-            
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-30T08:01:47.601Z" user="andreas">v 0.1.0</note>
-<note type="updated" update="translation-status" value="2.g" date-time="2019-10-30T08:02:06.229Z" user="andreas">2.g</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:57:15.069Z" user="mike">2.h</note>
-    <note type="updated" update="text-version" value="0.1.1" date-time="2021-02-01T11:29:48.336Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#andreas" when="2019-10-30T08:01:47.601Z" type="text-version" status="v 0.1.0" xml:id="UT22084-001-004-9">
+                    <desc>v 0.1.0</desc>
+                </change>
+                <change who="#andreas" when="2019-10-30T08:02:06.229Z" type="translation-status" status="2.g" xml:id="UT22084-001-004-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#mike" when="2020-01-27T12:57:15.069Z" type="translation-status" status="2.h" xml:id="UT22084-001-004-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-02-01T11:29:48.336Z" type="text-version" status="0.1.1" xml:id="UT22084-001-004-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.1.2" xml:id="UT22084-001-004-13">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-03T11:44:21.41Z" type="translation-status" status="2.g" xml:id="UT22084-001-004-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-03T11:44:21.41Z" type="text-version" status="0.1.3" xml:id="UT22084-001-004-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
