--- a/translations/kangyur/translations/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
+++ b/translations/kangyur/translations/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
@@ -20,7 +20,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-008-94">Nathaniel Rich</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -156,6 +156,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-03T11:44:49.464Z" type="text-version" status="1.0.0" xml:id="UT22084-101-008-97">
                     <desc>First published version</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-03T12:22:34.867Z" type="text-version" status="1.0.1" xml:id="UT22084-101-008-99">
+                    <desc>update to bib entry.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -477,8 +480,8 @@
                                                   Additional Materials</title>. Translated and
                                                 edited by Arthur McKeown. Boston: Brill,
                                                 2010.</bibl>
-                                        <bibl xml:id="UT22084-100-047-84">Orosz, Gergely. <title xml:lang="en">A Catalogue of the Tibetan Manuscripts and Block Prints in the Library of the
-                                                Hungarian Academy of Sciences</title>. Library of the Hungarian Academy of Sciences Budapest, 2010. </bibl>
+                                        <bibl xml:id="UT22084-101-008-98">Orosz, Gergely. <title xml:lang="en">A Catalogue of the Tibetan Manuscripts and Block Prints in the Library of the
+                                                Hungarian Academy of Sciences</title>. Budapest: Library of the Hungarian Academy of Sciences, 2010. </bibl>
                                 </div>
                         </div>
                         <div type="glossary" status="excluded">
