--- a/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
+++ b/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Illuminating Appearance of All Things Distinctly Without Their Departing from their Essential Nature, Emptiness</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">dharmatāsvabhāva­śūnyatācalapratisarvāloka</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Dharmatāsvabhāva­śūnyatācalapratisarvāloka</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">chos nyid rang gi ngo bo stong pa nyid las mi g.yo bar tha dad pa thams cad la snang ba'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryadharmatāsvabhāva­śūnyatācalapratisarvāloka­sūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryadharmatāsvabhāva­śūnyatācalapratisarvāloka­sūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos nyid rang gi ngo bo stong pa nyid las mi g.yo bar tha dad pa thams cad la snang ba'i mdo</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">chos nyid mi g.yo ba'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-055-002-1">Sakya Pandita Translation Group</author>
@@ -19,12 +19,12 @@
                 <editor role="projectEditor" xml:id="UT22084-055-002-25">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2023</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-055-002"/>
                 <date/>
             </publicationStmt>
@@ -84,6 +84,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-25T13:22:42.907Z" type="text-version" status="0.0.10" xml:id="UT22084-055-002-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T11:33:33.416Z" type="translation-status" status="2.e" xml:id="UT22084-055-002-29">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T11:33:33.416Z" type="text-version" status="0.0.11" xml:id="UT22084-055-002-30">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
