--- a/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
+++ b/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Questions of the Brāhmaṇī Śrīmatī</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">śrīmatībrāhmaṇīparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Śrīmatībrāhmaṇīparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bram ze mo dpal ldan mas zhus pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryaśrīmatībrāhmaṇī­paripṛcchā­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryaśrīmatībrāhmaṇī­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bram ze mo dpal ldan mas zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-059-013-1">Subhashita Translation Group</author>
                 <editor role="reviser" xml:id="UT22084-059-013-2">Benjamin Ewing</editor>
@@ -15,13 +15,14 @@
                 <consultant role="projectManager" xml:id="UT22084-059-013-4">Lowell Cook</consultant>
                 <editor role="associateEditor" xml:id="UT22084-059-013-5">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-059-013-31">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-059-013-43">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.14 <date>2023</date>
+                <edition>v 0.0.16 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-059-013"/>
                 <date/>
             </publicationStmt>
@@ -105,6 +106,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-13T11:06:22.058Z" type="text-version" status="0.0.14" xml:id="UT22084-059-013-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-02T14:38:21.987Z" type="text-version" status="0.0.15" xml:id="UT22084-059-013-44">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T15:32:41.933Z" type="translation-status" status="2.b" xml:id="UT22084-059-013-45">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T15:32:41.933Z" type="text-version" status="0.0.16" xml:id="UT22084-059-013-46">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
