--- a/translations/kangyur/placeholders/079-017_toh390-the_tantra_of_the_great_vow.xml
+++ b/translations/kangyur/placeholders/079-017_toh390-the_tantra_of_the_great_vow.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Tantra of the Great Vow</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">samayatantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Samayatantra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dam tshig chen po'i rgyud/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrīmahāsamayatantrarājanāma</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Śrīmahāsamayatantrarājanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal dam tshig chen po'i rgyud kyi rgyal po zhes bya ba/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <author role="translatorMain" xml:id="UT22084-079-017-1"/>
+                <author role="translatorEng" xml:id="UT22084-079-017-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-079-017"/>
                 <date/>
             </publicationStmt>
@@ -31,12 +32,27 @@
                     <idno source-id="O1JC114941JC12091" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T08:56:42.481Z" user="admin">16/12/2022 08:56:42</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T08:56:01.915Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T08:56:01.915Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T08:56:36.695Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-16T08:56:01.915Z" type="translation-status" status="3" xml:id="UT22084-079-017-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T08:56:01.915Z" type="text-version" status="0.0.1" xml:id="UT22084-079-017-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T08:56:36.695Z" type="text-version" status="0.0.2" xml:id="UT22084-079-017-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-079-017-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T15:48:59.059Z" type="translation-status" status="2.h" xml:id="UT22084-079-017-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T15:48:59.059Z" type="text-version" status="0.0.4" xml:id="UT22084-079-017-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
