--- a/translations/kangyur/placeholders/065-003_toh240-the_sutra_of_the_wheel_of_no_reversions.xml
+++ b/translations/kangyur/placeholders/065-003_toh240-the_sutra_of_the_wheel_of_no_reversions.xml
@@ -5,22 +5,23 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Wheel of No Reversions</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">avaivartacakrasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Avaivartacakrasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyir mi ldog pa'i 'khor lo'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāvaivartacakra­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāvaivartacakra­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phyir mi ldog pa'i 'khor lo zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《不退轉輪經 》 （大正藏：佛說廣博嚴淨不退轉輪經）</title>
-                <author role="translatorMain" ref="contributors.xml#team-35"/>
-                <author role="translatorEng" ref="contributors.xml#person-207">James B. Apple Ph.D.</author>
-                <consultant role="projectManager" ref="contributors.xml#person-207">James B. Apple Ph.D.</consultant>
-                <sponsor ref="sponsors.xml#sponsor-187">Chen Xinyi and family</sponsor>
+                <author role="translatorMain" xml:id="UT22084-065-003-1"/>
+                <author role="translatorEng" xml:id="UT22084-065-003-2">James B. Apple Ph.D.</author>
+                <consultant role="projectManager" xml:id="UT22084-065-003-3">James B. Apple Ph.D.</consultant>
+                <sponsor xml:id="UT22084-065-003-4">Chen Xinyi and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-065-003"/>
                 <date/>
             </publicationStmt>
@@ -28,9 +29,9 @@
                 <bibl key="toh240" type="text">
                     <ref>Toh 240</ref>
                     <biblScope>vol.65, ff. 241v-301v(pp.482-602)</biblScope>
-                    <author role="translatorTib">t. danasila</author>
-                    <author role="translatorTib">munivarma</author>
-                    <author role="translatorTib">ye shes sde</author>
+                    <author role="translatorTib" xml:id="UT22084-065-003-9">t. danasila</author>
+                    <author role="translatorTib" xml:id="UT22084-065-003-10">munivarma</author>
+                    <author role="translatorTib" xml:id="UT22084-065-003-11">ye shes sde</author>
                     <location work="UT4CZ5369" count-pages="121">
                         <volume number="65" start-page="482" end-page="602"/>
                     </location>
@@ -38,12 +39,27 @@
                     <idno source-id="O1JC114941JC11888" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:03:35.721Z" user="admin">26/07/2022 07:03:35</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:02:08.343Z" user="cabie-sim">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T07:03:28.941Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-065-003-5">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T07:02:08.343Z" type="text-version" status="0.0.2" xml:id="UT22084-065-003-6">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T07:03:28.941Z" type="text-version" status="0.0.3" xml:id="UT22084-065-003-7">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-065-003-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T16:17:29.266Z" type="translation-status" status="2.h" xml:id="UT22084-065-003-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T16:17:29.266Z" type="text-version" status="0.0.5" xml:id="UT22084-065-003-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
