--- a/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra on Advice for the King [2]</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">rājādeśasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Rājādeśasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">rājādeśanāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Rājādeśanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-062-015-1">Sakya Pandita Translation Group</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-062-015-2">Ven. Khenpo Kalsang Gyaltsen</consultant>
@@ -16,14 +16,15 @@
                 <author role="translatorEng" xml:id="UT22084-062-015-5">Rev. Dr. Ani Kunga Chodron</author>
                 <editor role="projectEditor" xml:id="UT22084-062-015-6">George FitzHerbert</editor>
                 <editor role="projectEditor" xml:id="UT22084-062-015-24">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-062-015-37">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2023</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-062-015"/>
                 <date/>
             </publicationStmt>
@@ -86,6 +87,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-09T10:07:35.816Z" type="text-version" status="0.0.10" xml:id="UT22084-062-015-29">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-09T10:08:08.133Z" type="text-version" status="0.0.11" xml:id="UT22084-062-015-38">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T16:26:56.632Z" type="translation-status" status="2.d" xml:id="UT22084-062-015-39">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-06T16:26:56.632Z" type="text-version" status="0.0.12" xml:id="UT22084-062-015-40">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
