--- a/translations/kangyur/translations/076-008_toh354-teaching_the_causes_and_results_of_good_and_ill.xml
+++ b/translations/kangyur/translations/076-008_toh354-teaching_the_causes_and_results_of_good_and_ill.xml
@@ -27,7 +27,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-076-008-343">Andre Rodrigues</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.7 <date>2023</date>
+                <edition>v 1.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -178,6 +178,9 @@
                 <change who="#martina-cotter" when="2023-10-30T12:02:44.047Z" type="text-version" status="1.0.7" xml:id="UT22084-076-008-359">
                     <desc>updated typo in title.</desc>
                 </change>
+                <change who="#laura" when="2023-11-06T16:31:55.106Z" type="text-version" status="1.0.8" xml:id="UT22084-076-008-360">
+                    <desc>A few tiny copyedits</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -232,7 +235,7 @@
                         355).<note place="end" xml:id="UT22084-076-008-357">Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh355.html">Teaching the Ripening of Virtuous and Nonvirtuous Actions</ref>
                             </title>, Toh 355 (84000: Translating the Words of the 
-                            Buddha,2023).</note> Upon comparison, it is clear that these two Tibetan texts are
+                            Buddha, 2023).</note> Upon comparison, it is clear that these two Tibetan texts are
                         simply different translations of the same Chinese sūtra. However, perhaps solely on account of
                         their dissimilar titles, they are retained as two distinct yet adjacent entries in the Degé
                         Kangyur.</p>
@@ -1133,17 +1136,18 @@
                     <bibl xml:id="UT22084-076-008-229">Nordrang Orgyen (nor brang o rgyan), ed. <title xml:lang="Bo-Ltn">chos rnam kun btus</title>. Beijing: krung go’i bod rig pa dpe skrun khang, 2008. <ref target="http://purl.bdrc.io/resource/WA1KG2733">BDRC </ref>
                         <ref target="http://purl.bdrc.io/resource/WA1KG2733">WA1KG</ref>
                         <ref target="http://purl.bdrc.io/resource/WA1KG2733">2733</ref>.</bibl>
-                    <bibl xml:id="UT22084-076-008-231">
-                        <title xml:lang="Zh-Ltn">Shanwo yinguo jing</title>
-                        <title xml:lang="zh">善惡因果經</title>. Taishō 2881 (<ref target="https://cbetaonline.dila.edu.tw/zh/T2881">CBETA</ref>; <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T2881.html">SAT</ref>).</bibl>
+                    
                     <bibl xml:id="UT22084-076-008-232">MacKenzie, David Neil. <title xml:lang="en">The ‘Sūtra of the
                             Causes and Effects of Actions’ in Sogdian</title>. London Oriental Series 22. London: Oxford
                         University Press, 1970.</bibl>
                     <bibl xml:id="UT22084-076-008-233">Scherrer-Schaub, Cristina. “Enacting Words: A Diplomatic Analysis
-                        of the Imperial Decrees (<foreign xml:lang="Bo-Ltn" type="term">bkas bcad</foreign>) and their
+                        of the Imperial Decrees (<foreign xml:lang="Bo-Ltn" type="term">bkas bcad</foreign>) and Their
                         Application in the <foreign xml:lang="Bo-Ltn">sGra sbyor bam po gñis pa</foreign> Tradition.”
                             <title xml:lang="en">Journal of the International Association of Buddhist Studies</title>
-                        25, no. 1-2 (2002): 263–340.</bibl>
+                        25, nos. 1–2 (2002): 263–340.</bibl>
+                    <bibl xml:id="UT22084-076-008-231">
+                        <title xml:lang="Zh-Ltn">Shanwo yinguo jing</title>
+                        <title xml:lang="zh">善惡因果經</title>. Taishō 2881 (<ref target="https://cbetaonline.dila.edu.tw/zh/T2881">CBETA</ref>; <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T2881.html">SAT</ref>).</bibl>
                     <bibl xml:id="UT22084-076-008-234">Stein, Rolf A. <title xml:lang="en">Rolf Stein’s Tibetica
                             Antiqua: With Additional Materials</title>. Translated and edited by Artur P. McKeown.
                         Brill’s Tibetan Studies Library 24. Leiden: Brill, 2010.</bibl>
