--- a/translations/kangyur/placeholders/081-017_toh448-the_tantra_of_tarayogini.xml
+++ b/translations/kangyur/placeholders/081-017_toh448-the_tantra_of_tarayogini.xml
@@ -5,13 +5,18 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sgrol ma rnal 'byor ma'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">tārāyoginitantra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Tārāyoginitantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of Tārāyoginī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phrin las thams cad 'byung ba'i sgrol ma 'dus pa don dam pa zhes bya ba rnal 'byor ma'i rgyud kyi rgyal po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">samājaparamārtha­sarvakarmodayanāma­tārāyoginītantrarāja</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Samājaparamārtha­sarvakarmodayanāma­tārāyoginītantrarāja</title>
                 <title type="otherTitle" xml:lang="en">[Note: only in late Degé printings; not in Degé par phud, nor in Narthang, Peking, Cone, or Lhasa Kangyurs. Urga 745.]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-081-017"/>
             </publicationStmt>
             <sourceDesc>
@@ -25,9 +30,19 @@
                     <idno source-id="O1JC114941JC12158" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:35:49 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-081-017-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-07T08:26:30.991Z" type="translation-status" status="3" xml:id="UT22084-081-017-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-07T08:26:30.991Z" type="text-version" status="0.0.1" xml:id="UT22084-081-017-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
