--- a/translations/kangyur/placeholders/066-014_toh256-the_seal_of_the_dharma.xml
+++ b/translations/kangyur/placeholders/066-014_toh256-the_seal_of_the_dharma.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="en">The Seal of the Dharma: the Ten Chapters of the Explanation by Buddha Vairocana of the State of Mind of Bodhisattvas</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-066-014"/>
                 <date/>
             </publicationStmt>
@@ -48,6 +48,12 @@
                     <desc/>
                 </change>
                 <change who="#line-tofte" when="2023-08-15T09:31:41.312Z" type="text-version" status="0.0.4" xml:id="UT22084-066-014-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-07T08:28:47.176Z" type="translation-status" status="3" xml:id="UT22084-066-014-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-07T08:28:47.176Z" type="text-version" status="0.0.5" xml:id="UT22084-066-014-8">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
