--- a/translations/kangyur/placeholders/067-003_toh264-the_sutra_on_liberation.xml
+++ b/translations/kangyur/placeholders/067-003_toh264-the_sutra_on_liberation.xml
@@ -5,15 +5,16 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">thar mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mokṣasūtra (translated from the Chinese)</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Mokṣasūtra (translated from the Chinese)</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on Liberation</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa thar pa chen po phyogs su rgyas pa 'gyod tshangs kyis sdig sbyangs te sangs rgyas su grub par rnam par bkod pa zhes bya ba theg pa chen po'i mdo</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2021</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-067-003"/>
                 <date/>
             </publicationStmt>
@@ -28,10 +29,45 @@
                     <idno source-id="O1JC114941JC11919" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-19T07:27:44.822Z" user="admin">19/07/2023 07:27:44</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-26T13:56:29.874Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:52:24.696Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-03-08T09:52:24.696Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="" date-time="2022-05-19T06:28:04.448Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-19T06:28:04.448Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:30:33.925Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-01T09:30:33.925Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="" date-time="2023-07-19T07:27:40.516Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.5" date-time="2023-07-19T07:27:40.516Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-08-26T13:56:29.874Z" type="text-version" status="0.0.1" xml:id="UT22084-067-003-1">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-08T09:52:24.696Z" type="translation-status" status="4" xml:id="UT22084-067-003-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-03-08T09:52:24.696Z" type="text-version" status="0.0.2" xml:id="UT22084-067-003-3">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T06:28:04.448Z" type="translation-status" status="" xml:id="UT22084-067-003-4">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2022-05-19T06:28:04.448Z" type="text-version" status="0.0.3" xml:id="UT22084-067-003-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-01T09:30:33.925Z" type="translation-status" status="4" xml:id="UT22084-067-003-6">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-01T09:30:33.925Z" type="text-version" status="0.0.4" xml:id="UT22084-067-003-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-19T07:27:40.516Z" type="translation-status" status="" xml:id="UT22084-067-003-8">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-07-19T07:27:40.516Z" type="text-version" status="0.0.5" xml:id="UT22084-067-003-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-067-003-10">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-07T08:31:21.813Z" type="translation-status" status="3" xml:id="UT22084-067-003-11">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-07T08:31:21.813Z" type="text-version" status="0.0.7" xml:id="UT22084-067-003-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
