--- a/translations/kangyur/translations/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
+++ b/translations/kangyur/translations/034-016_toh28-the_perfection_of_wisdom_for_samantabhadra.xml
@@ -6,9 +6,10 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Samantabhadra Perfection of Wisdom</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Samantabhadra­prajñā­pāramitā</title>
-                <title type="mainTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་ཀུན་ཏུ་བཟང་པོ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="mainTitle" xml:lang="bo">ཤེར་ཕྱིན་ཀུན་ཏུ་བཟང་པོ།</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa
+                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin kun tu bzang po</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་ཤེས་རབ་ཀྱི་ཕ་རོལ་ཏུ་ཕྱིན་པ་ཀུན་ཏུ་བཟང་པོ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin pa
                     kun tu bzang po theg pa chen po’i mdo</title>
                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Samantabhadra
                     Perfection of Wisdom”</title>
@@ -16,7 +17,6 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kun bzang gi mdo</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">’phags pa shes rab kyi pha rol tu phyin
                     pa kun tu bzang po’i mdo</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">sher phyin kun tu bzang po</title>
                 <author role="translatorMain" xml:id="UT22084-034-016-81">Translated by the Nyimé
                     Translation Committee<lb/>under the patronage and supervision of 84000:
                     Translating the Words of the Buddha</author>
@@ -33,7 +33,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-016-131">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.5 <date>2023</date>
+                <edition>v 1.1.6 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -192,6 +192,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-20T14:18:39.943Z" type="text-version" status="1.1.5" xml:id="UT22084-034-016-144">
                     <desc>Added pending links.</desc>
+                </change>
+                <change who="#john" when="2023-11-07T09:47:46.072Z" type="text-version" status="1.1.6" xml:id="UT22084-034-016-145">
+                    <desc>Main and long titles corrected.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
