--- a/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/placeholders/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -13,13 +13,14 @@
                 <editor role="reviser" xml:id="UT22084-034-025-4">Stephen Jenkins</editor>
                 <editor role="associateEditor" xml:id="UT22084-034-025-5">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-034-025-26">Laura Goetz</editor>
+                <editor role="projectEditor" xml:id="UT22084-034-025-38">David Fiordalis</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.15 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-034-025"/>
                 <date/>
             </publicationStmt>
@@ -94,6 +95,15 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-31T07:53:46.295Z" type="text-version" status="0.0.13" xml:id="UT22084-034-025-31">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-31T07:54:21.717Z" type="text-version" status="0.0.14" xml:id="UT22084-034-025-39">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T11:29:29.534Z" type="translation-status" status="2.a" xml:id="UT22084-034-025-40">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-09T11:29:29.534Z" type="text-version" status="0.0.15" xml:id="UT22084-034-025-41">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
